test/pass/52-polyfun-assignment-inference.perk
import "stdio.h"

fun <T> thing (a : T) : T {
    let x : T = 5;
    return a + x;
} 

fun main () : void {
    printf("%d\n", thing @ int (10));
    return;
}